--- a/staff/form.css
+++ b/staff/form.css
@@ -4,12 +4,10 @@ body {
     align-items: center;
     justify-content: space-around;
 }
-
 .container {
     height: 842px;
-    width: 595px;
+    width: 655px;
     border: solid;
-
 }
 
 .header {
@@ -18,7 +16,9 @@ body {
     height: 100px;
     padding: 5px;
     margin-left: 101px;
-
+    align-items: center;
+    justify-content: center;
+    /* font-size: 23px; */
 }
 
 .logo img {
@@ -84,7 +84,8 @@ table {
 }
 
 th,
-td ,tr{
+td,
+tr {
     width: 50%;
 }
 
